--- a/01 Probabilidad.ipynb
+++ b/01 Probabilidad.ipynb
@@ -20,6 +20,7 @@
         "id": "LYvAOR2VzHmW"
       },
       "source": [
+        "# Esto es una copia del repo local\n",
         "\n",
         "**Diplomatura en Ciencia de Datos, Aprendizaje Automático y sus Aplicaciones**\n",
         "\n",
